# ros2-gz-sandbox

champ_base/config/ekf/: base_to_footprint.yaml
champ_base/src/: quadruped_controller.cpp
go2_description/: CMakeLists.txt
go2_description/config/champ/: gait.yaml  links.yaml
go2_description/config/ros_control/: ros_control.yaml
go2_description/launch/: robot.launch.py
go2_description/urdf/: go2_description.urdf  leg.xacro  lidar_4D_lidar.xacro  unitree_go2_gazebo.xacro  unitree_go2_robot.xacro  velodyne.xacro
go2_description/xacro/: gazebo.xacro  leg.xacro  robot.xacro  robot_VLP.xacro  velodyne.xacro
leo_description/: CMakeLists.txt  package.xml
leo_description/urdf/: leo_sim.sdf  leo_sim.urdf  macros.xacro
ros2_gz_sandbox/: CMakeLists.txt  package.xml
ros2_gz_sandbox/launch/: sim.launch.py  sim_single.launch.py  spawn_drone.launch.py  spawn_go2.launch.py  spawn_leo.launch.py  spawn_multimodal.launch.py
ros2_gz_sandbox/models/: size60_1.stl
ros2_gz_sandbox/urdf/: drone.urdf.xacro  multimodal.urdf.xacro
ros2_gz_sandbox/worlds/: mars1.sdf  output.sdf  output.stl
rover_demo_gz/: CMakeLists.txt
rover_demo_gz/hooks/: gz_sim_resource_path.dsv.in
rover_demo_gz/launch/: sim.launch.py  sim_multimodal.launch.py  sim_single.launch.py  spawn_drone.launch.py  spawn_go2.launch.py  spawn_leo.launch.py  spawn_multimodal.launch.py
rover_demo_gz/models/: terrain_test.stl
rover_demo_gz/urdf/: cube.urdf.xacro  drone.urdf.xacro  leo_sim.sdf  leo_sim.urdf  macros.xacro
rover_demo_gz/worlds/: empty.sdf  mars1.sdf  slope.sdf  slope.stl  walls.sdf
(+1 files in other folders)
